Article header and form styled at the frontpage

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Scatter
       </header>
       
       <form action="http://scatteralpha.appspot.com/">
-        <input type="submit" value="Enter">
+        <input type="submit" value="Enter &rarr;">
         <a href="" title="I'm a business owner">I'm a business owner</a>
       </form>
       
