--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@ title: Scatter
       </header>
       
       <form action="http://scatteralpha.appspot.com/">
-        <input type="submit" value="Enter &rarr;">
-        <a href="" title="I'm a business owner">I'm a business owner</a>
+        <input type="submit" value="Learn more">
+        <a href="" title="Enter">Enter now</a>
+        <br/>
+        <a href="" title="I'm a business owner">I'm a business owner &rarr;</a>
       </form>
       
       <nav>
