Added some love to buttons and animations

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Scatter
       
       <form>
         <input type="submit" value="Learn more">
-        <a href="http://scatteralpha.appspot.com/" title="Enter">Enter now</a>
+        <input type="submit" value="Enter now" formaction="http://scatteralpha.appspot.com/">
         <br/>
         <a href="{{ site.url }}/business" title="I'm a business owner">I'm a business owner &rarr;</a>
       </form>
