--- a/_posts/2013-08-13-business.html
+++ b/_posts/2013-08-13-business.html
@@ -37,6 +37,7 @@ title: Scatter for Businesses
     </article>
   </section>
   
+  
   <section id="slide-3">
     <article>
       <header>
@@ -72,10 +73,19 @@ title: Scatter for Businesses
   </section>
   
   
+  <nav>
+    <ul>
+      <li class="active">&nbsp;</li>
+      <li>&nbsp;</li>
+      <li>&nbsp;</li>
+    </ul>
+  </nav>
+  
   <form>
     <input type="submit" value="Sign up now!">
     <input type="submit" value="Login">
     <a href="{{ site.url }}/business" title="Try it for free">Try it for free!</a>
   </form>
+  
   
 </div>
