Comitting small changes ....

--- a/_posts/2013-08-13-business.html
+++ b/_posts/2013-08-13-business.html
@@ -25,6 +25,9 @@ class: business
         <span>Everywhere</span>
       </div>
       
+      <div id="animator">
+        &nbsp;
+      </div>
     </article>
   </section>
   
