Starting the final updates

--- a/_posts/2013-08-13-business.html
+++ b/_posts/2013-08-13-business.html
@@ -55,7 +55,7 @@ class: business
       <div id="offer">
         <h2>Time and location based offers</h2>
         <p>Create your offer in 30 seconds</p>
-        <img src="{{ site.url }}/assets/clock.png" alt="Create your offer in 30 seconds" />
+        <img src="{{ site.url }}/assets/clock2.png" alt="Create your offer in 30 seconds" />
       </div>
     
       <div id="spread">
