All done, needs to be reviewed

--- a/_posts/2013-08-13-business.html
+++ b/_posts/2013-08-13-business.html
@@ -61,6 +61,9 @@ class: business
   
   <section id="slide-3">
     <article>
+      <header>
+        <h1>Title here</h1>
+      </header>
       
       <div id="offer">
         <h2>You create time and location based offers</h2>
@@ -85,16 +88,21 @@ class: business
   </section>
   
   
-  <section id="slide-3">
+  <section id="slide-4">
     <article>
       <header>
         <h1>Simple Dashboard</h1>
       </header>
       
-      <ul>
-        <li>Optimize your offer</li>
-        <li>Get statistics about your campaign</li>
-      </ul>
+      <div>
+        <figure>
+          <figcaption>dashboard image here</figcaption>
+        </figure>
+        <ul>
+          <li>Optimize your offer</li>
+          <li>Get statistics about your campaign</li>
+        </ul>
+      </div>
     </article>
   </section>
   
