Content done for business slides

--- a/_posts/2013-08-13-business.html
+++ b/_posts/2013-08-13-business.html
@@ -61,7 +61,7 @@ class: business
   <section id="slide-2">
     <article>
       <header>
-        <h1>Communicate easily with buyers</h1>
+        <h1>Communicate easily with customers</h1>
       </header>
       
       <div>
@@ -88,12 +88,10 @@ class: business
       </header>
       
       <div>
-        <figure>
-          <figcaption>dashboard image here</figcaption>
-        </figure>
+        <img id="dashboard" src="{{ site.url }}/assets/dashboard.png" alt="Dashboard">
         <ul>
-          <li>Optimize your offer</li>
-          <li>Get statistics about your campaign</li>
+          <li>Monitor and optimize your ads</li>
+          <li>Get statistics about your ad campaign</li>
         </ul>
       </div>
     </article>
