--- a/_posts/2013-08-13-business.html
+++ b/_posts/2013-08-13-business.html
@@ -6,6 +6,15 @@ class: business
 
 
 <div id="content" class="business">
+  
+  <form>
+    <input type="submit" value="Sign up now!">
+    <input type="submit" value="Login">
+    <p>
+      <a href="{{ site.url }}/business" title="Try it for free">Try it for free!</a>
+    </p>
+  </form> 
+
   <section id="slide-1">
     <article>
       <header>
@@ -28,8 +37,8 @@ class: business
     </article>
   </section>
   
-  <!-- this slide was moved up lately -->
-  <section id="slide-3">
+  
+  <section id="slide-2">
     <article>
       <header>
         <h1>Choose when and where your ad is seen</h1>
@@ -58,7 +67,7 @@ class: business
   </section>
   
   
-  <section id="slide-2">
+  <section id="slide-3">
     <article>
       <header>
         <h1>Communicate easily with customers</h1>
@@ -73,11 +82,8 @@ class: business
         <img id="buyers" src="{{ site.url }}/assets/call.png" alt="Call people">
         <h2>Talk directly to your customers</h2>
       </div>
-      
     </article>
   </section>
-  
-  
   
   
   
