--- a/_posts/2013-08-13-business.html
+++ b/_posts/2013-08-13-business.html
@@ -45,6 +45,7 @@ class: business
       
       <div id="offer">
         <h3>Create time and location based offers</h3>
+        <img src="{{ site.url }}/assets/map-preview2.png" alt="Map">
         <ul>
           <li>Set duration for which your ad is shown</li>
           <li>Choose the location where your offer is seen</li>
