Second business slide done

--- a/_posts/2013-08-13-business.html
+++ b/_posts/2013-08-13-business.html
@@ -47,7 +47,9 @@ class: business
         <h3>Create time and location based offers</h3>
         <img src="{{ site.url }}/assets/map-preview2.png" alt="Map">
         <ul>
+          <li><img src="{{ site.url }}/assets/clock.png" alt="Clock"></li>
           <li>Set duration for which your ad is shown</li>
+          <li><img src="{{ site.url }}/assets/location.png" alt="Location"></li>
           <li>Choose the location where your offer is seen</li>
         </ul>
       </div>
