--- a/_posts/2013-08-13-business.html
+++ b/_posts/2013-08-13-business.html
@@ -75,7 +75,7 @@ class: business
       </header>
       
       <div>
-        <img id="communicate" src="{{ site.url }}/assets/tablet.png" alt="Tablet">
+        <img id="communicate" src="{{ site.url }}/assets/tablet-chatting.jpg" alt="Tablet">
         <h3>Built in private messaging</h3>
       </div>
       
