Last modifications done for the business section

--- a/_posts/2013-08-13-business.html
+++ b/_posts/2013-08-13-business.html
@@ -8,11 +8,8 @@ class: business
 <div id="content" class="business">
   
   <form>
-    <input type="submit" value="Sign up now!">
-    <input type="submit" value="Login">
-    <p>
-      <a href="{{ site.url }}/business" title="Try it for free">Try it for free!</a>
-    </p>
+    <button>Sign up now!<span>Try it for free</span></button>
+    <button>Login</button>
   </form> 
 
   <section id="slide-1">
@@ -75,7 +72,7 @@ class: business
       </header>
       
       <div>
-        <img id="communicate" src="{{ site.url }}/assets/tablet-chat2.png" alt="Tablet">
+        <img id="communicate" src="{{ site.url }}/assets/tablet-chat.png" alt="Tablet">
         <h3>Built in private messaging</h3>
       </div>
       
