Images resized and optimized for mobile

--- a/_posts/2013-08-13-business.html
+++ b/_posts/2013-08-13-business.html
@@ -42,7 +42,7 @@ class: business
       
       <div id="offer">
         <h3>Create time and location based offers</h3>
-        <img src="{{ site.url }}/assets/map-preview2.png" alt="Map">
+        <img src="{{ site.url }}/assets/map-preview.png" alt="Map">
         <ul>
           <li><img src="{{ site.url }}/assets/clock.png" alt="Clock"></li>
           <li>Set duration for which your ad is shown</li>
