Still working on the business slides, making them responsive

--- a/_posts/2013-08-13-business.html
+++ b/_posts/2013-08-13-business.html
@@ -101,4 +101,8 @@ class: business
     </article>
   </section>
   
+  <div id="form-for-mobile">
+    {% include form.html %}
+  </div>
+  
 </div>
