Frontpage responsivenss done

--- a/_posts/2013-08-13-business.html
+++ b/_posts/2013-08-13-business.html
@@ -101,7 +101,7 @@ class: business
     </article>
   </section>
   
-  <div id="form-for-mobile">
+  <div class="mobile">
     {% include form.html %}
   </div>
   
