Changes requested are done

--- a/_posts/2013-08-13-business.html
+++ b/_posts/2013-08-13-business.html
@@ -24,7 +24,7 @@ class: business
         <p id="p2"></p>
         <p id="p3"></p>
         
-        <h3>Create an ad. We shoot it everywhere.</h3>
+        <h3>Create an ad. We show it everywhere.</h3>
       </div>
     </article>
     
