Working on images

--- a/_posts/2013-09-17-categories.html
+++ b/_posts/2013-09-17-categories.html
@@ -15,14 +15,14 @@ class: categories
     
     <li>
       <a href="{{ site.url }}/" title="Food & Drink">
-        <img src="{{ site.url }}/assets/dashboard.png" alt="Food & Drink">
+        <img src="http://i.istockimg.com/file_thumbview_approve/23150509/2/stock-photo-23150509-place-setting.jpg" alt="Food & Drink">
         <p>Food & Drink</p>
       </a>
     </li>
     
     <li>
       <a href="{{ site.url }}/" title="Shopping">
-        <img src="{{ site.url }}/assets/dashboard.png" alt="Shopping">
+        <img src="http://i.istockimg.com/file_thumbview_approve/21009878/2/stock-photo-21009878-shopping-bags.jpg" alt="Shopping">
         <p>Shopping</p>
       </a>
     </li>
