Button to show categories added

--- a/_posts/2013-09-17-categories.html
+++ b/_posts/2013-09-17-categories.html
@@ -5,6 +5,8 @@ class: categories
 ---
 
 <div id="categories">
+  <button>Browse categories</button>
+  
   <ul>
     <li>
       <a href="{{ site.url }}/" title="All categories">
