--- a/_posts/2013-09-20-main.html
+++ b/_posts/2013-09-20-main.html
@@ -4,6 +4,11 @@ title: Scatter
 class: main
 ---
 
+<div id="map">
+  <img src="{{ site.url }}/assets/map-tmp.png">
+  <span class="close"></span>
+</div>
+
 <article class="card">
   <div id="inner">
     <div class="cardcategory">
@@ -23,12 +28,12 @@ class: main
       <div class="distance">12.3 Km</div>
       <div class="timeremaining">6234h : 42m left</div>
       <p class="message">Join us for Aarey Forest Half Marathon. Dt:16th Jun Time:6.00a.m. Assembly Point:Toll Naka, Off the Western Expr. Highway, Goregaon East</p>
+      {% include card-sendmessage.html %}
     </div>
     
     {% include card-footer.html klass="active" %}
   </div>
 </article>
-
 
 
 
@@ -51,6 +56,7 @@ class: main
       <div class="distance">4798 Km</div>
       <div class="timeremaining">12h : 42m left</div>
       <p class="message">Dance Villa provides salsa dance classes. We have excellent staff that is courteous and professional. Call now for very competitive prices.</p>
+      {% include card-sendmessage.html %}
     </div>
 
     {% include card-footer.html %}
@@ -79,6 +85,7 @@ class: main
       <div class="distance">12 Km</div>
       <div class="timeremaining">0h : 42m left</div>
       <p class="message">Palm Drive flat for sale in Gurgaon, Golf Course Extension Road. Immediate requirement. Contact right now!</p>
+      {% include card-sendmessage.html %}
     </div>
 
     {% include card-footer.html %}
@@ -107,6 +114,7 @@ class: main
       <div class="distance">12 Km</div>
       <div class="timeremaining">0h : 42m left</div>
       <p class="message">We are the specialist in skin medicare. Visit us for best service.</p>
+      {% include card-sendmessage.html %}
     </div>
 
     {% include card-footer.html %}
@@ -134,6 +142,7 @@ class: main
       <div class="distance">12 Km</div>
       <div class="timeremaining">0h : 42m left</div>
       <p class="message">Palm Drive flat for sale in Gurgaon, Golf Course Extension Road. Immediate requirement. Contact right now!</p>
+      {% include card-sendmessage.html %}
     </div>
 
     {% include card-footer.html %}
@@ -161,6 +170,7 @@ class: main
       <div class="distance">12 Km</div>
       <div class="timeremaining">0h : 42m left</div>
       <p class="message">We are the specialist in skin medicare. Visit us for best service.</p>
+      {% include card-sendmessage.html %}
     </div>
 
     {% include card-footer.html %}
@@ -186,6 +196,7 @@ class: main
       <div class="distance">12.3 Km</div>
       <div class="timeremaining">6234h : 42m left</div>
       <p class="message">Join us for Aarey Forest Half Marathon. Dt:16th Jun Time:6.00a.m. Assembly Point:Toll Naka, Off the Western Expr. Highway, Goregaon East</p>
+      {% include card-sendmessage.html %}
     </div>
 
     {% include card-footer.html klass="active" %}
@@ -214,6 +225,7 @@ class: main
       <div class="distance">4798 Km</div>
       <div class="timeremaining">12h : 42m left</div>
       <p class="message">Dance Villa provides salsa dance classes. We have excellent staff that is courteous and professional. Call now for very competitive prices.</p>
+      {% include card-sendmessage.html %}
     </div>
 
     {% include card-footer.html %}
