Browse categories added

--- a/_posts/2013-09-20-main.html
+++ b/_posts/2013-09-20-main.html
@@ -30,6 +30,8 @@ class: main
   <span class="close"></span>
 </div>
 
+{% include categories.html %}
+
 <article class="card">
   <div id="inner">
     <div class="cardcategory">
