Map integrated into the article

--- a/_posts/2013-09-20-main.html
+++ b/_posts/2013-09-20-main.html
@@ -4,31 +4,7 @@ title: Scatter
 class: main
 ---
 
-<div id="map">
-  <div class="map">
-    <img src="{{ site.url }}/assets/map-tmp.png">
-  </div>
-  
-  <div class="usercontainer">
-    <h3 class="username">Oxygen Eco Friendly Drycleaning</h3>
-    <h3 class="messagelocation">Deen Dayal Upadhaya Marg, Barakhamba, New Delhi</h3>
-    
-    <div class="companyinfo">
-      <dl>
-        <dt>Phone number</dt>
-        <dd>1245690901</dd>
-        <dt>Website</dt>
-        <dd>http://scatteralpha.appspot.com/f</dd>
-      </dl>
-    </div>
-  </div>
-  
-  <div class="companyphoto">
-    <img src="http://i.istockimg.com/file_thumbview_approve/1446023/2/stock-photo-1446023-recipe-card-dividers.jpg" alt="All categories">
-  </div>
-  
-  <span class="close"></span>
-</div>
+
 
 {% include categories.html %}
 
@@ -55,6 +31,8 @@ class: main
     
     {% include card-footer.html klass="active" %}
   </div>
+ 
+  {% include card-map.html %}
 </article>
 
 
@@ -82,6 +60,8 @@ class: main
 
     {% include card-footer.html %}
   </div>
+  
+  {% include card-map.html %}
 </article>
 
 
@@ -110,6 +90,8 @@ class: main
 
     {% include card-footer.html %}
   </div>
+  
+  {% include card-map.html %}
 </article>
 
 
@@ -165,6 +147,8 @@ class: main
 
     {% include card-footer.html %}
   </div>
+  
+  {% include card-map.html %}
 </article>
 
 
@@ -192,6 +176,8 @@ class: main
 
     {% include card-footer.html %}
   </div>
+  
+  {% include card-map.html %}
 </article>
 
 <article class="card">
@@ -217,6 +203,8 @@ class: main
 
     {% include card-footer.html klass="active" %}
   </div>
+  
+  {% include card-map.html %}
 </article>
 
 
@@ -245,4 +233,6 @@ class: main
 
     {% include card-footer.html %}
   </div>
+  
+  {% include card-map.html %}
 </article>
